--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <html class="no-js oldie ie9" lang="en">
 <![endif]-->
 <!--[if (gte IE 9)|!(IE)]>
-<!--><html class="no-js" lang="en"> <!--<![endif]-->
+<!-->
+<html class="no-js" lang="en">
+<!--<![endif]-->
 
 <head>
 
@@ -113,7 +115,7 @@
                 <div class="intro-info">
                     <p class="lead">I am an ambitious youth leader, studying at Bayview Secondary School. As an active leader in the Toronto Youth Network and Bayview Computer Club, I seize all opportunities to grow as an individual and learn from others. From working as a Front End Developer for Helping Hands App to coaching at Lee's Badminton Training Centre, I apply a detailed, analytical approach to generating meaningful results. I hope to help and empower others, whilst creating an environment for other passionate individuals to thrive. </p>
                 </div>
-                
+
             </div>
         </div> <!-- /section-intro -->
         <!--
@@ -474,18 +476,15 @@
                 <!-- portfolio-wrapper -->
                 <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
 
-                    <div class="bgrid folio-item">
+                    <div class="folio-item">
                         <div class="item-wrap">
-                            <img src="images/footprint1.PNG" alt="footprint">
+                            <img src="images/summeet.jpg" alt="summeet">
                             <a href="#modal-01" class="overlay">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
-                                        <h3 class="folio-title">footprint</h3>
+                                        <h3 class="folio-title">summeet</h3>
                                         <span class="folio-types">
-                                            App that tracks users' carbon footprints and provides 
-                                        </span>
-                                        <span class="folio-types">
-                                            <br>tools to reduce it
+                                            Website that transcribes meetings in real time and summarizes ideas discussed
                                         </span>
                                     </div>
                                 </div>
@@ -493,15 +492,31 @@
                         </div>
                     </div> <!-- /folio-item -->
 
-                    <div class="bgrid folio-item">
+                    <div class="folio-item">
                         <div class="item-wrap">
-                            <img src="images/navisafe3.PNG" alt="NaviSafe">
+                            <img src="images/senti-tweets.PNG" alt="SentiTweets" style="width:60%; height: 60%">
+                            <a href="#modal-03" class="overlay">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">SentiTweets</h3>
+                                        <span class="folio-types">
+                                            Website that uses sentiment analysis of Tweets regarding companies to predict stock performance
+                                        </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div> <!-- /folio-item -->
+                    <!--
+                    <div class="folio-item">
+                        <div class="item-wrap">
+                            <img src="images/navisafe3.PNG" alt="NaviSafe" style="width:80%; height:80%">
                             <a href="#modal-02" class="overlay">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
                                         <h3 class="folio-title">NaviSafe</h3>
                                         <span class="folio-types">
-                                            App that takes neighbourhood crime data and determines the 
+                                            App that takes neighbourhood crime data and determines the
                                         </span>
                                         <span class="folio-types">
                                             <br>shortest and safest route to get users to their destination
@@ -511,7 +526,8 @@
                             </a>
                         </div>
                     </div> <!-- /folio-item -->
-<!--
+                    -->
+                    <!--
                     <div class="bgrid folio-item">
                         <div class="item-wrap">
                             <img src="images/momentum1.PNG" alt="Momentum">
@@ -528,85 +544,70 @@
                         </div>
                     </div> <!-- /folio-item -->
 
-                    <div class="folio-item">
-                        <div class="item-wrap">
-                            <img src="images/senti-tweets.PNG" alt="SentiTweets">
-                            <a href="#modal-03" class="overlay">
-                                <div class="folio-item-table">
-                                    <div class="folio-item-cell">
-                                        <h3 class="folio-title">SentiTweets</h3>
-                                        <span class="folio-types">
-                                            Website that uses sentiment analysis of Tweets regarding companies to predict stock performance
-                                        </span>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div> <!-- /folio-item -->
-                     <!-- modal popups - begin
+                    <!-- modal popups - begin
 	            ============================================================= -->
-	            <div id="modal-01" class="popup-modal slider mfp-hide">	
+                    <div id="modal-01" class="popup-modal slider mfp-hide">
 
-				     	<div class="media">
-				     		<img src="images/footprint1.PNG" alt="footprint" />
-				     	</div>      	
-                    
-					   <div class="description-box">
-					      <h4>footprint</h4>		      
-					      <p>App that tracks users' carbon footprints and provides tools to reduce it</p>
+                        <div class="media">
+                            <img src="images/summeet.jpg" alt="summeet" />
+                        </div>
 
-					      <div class="categories">App Development (Mockup)</div>			               
-					   </div>
+                        <div class="description-box">
+                            <h4>summeet</h4>
+                            <p>Website that transcribes meetings in real time and summarizes ideas discussed</p>
 
-			         <div class="link-box">
-			            <a href="https://devpost.com/software/footprint-hqtp0b">View Project</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+                            <div class="categories">Web Development</div>
+                        </div>
 
-				   </div> <!-- /modal-01 -->
+                        <div class="link-box">
+                            <a href="#" class="popup-modal-dismiss">Close</a>
+                            <a href="https://devpost.com/software/summeet">View Project</a>
+                        </div>
 
-				   <div id="modal-02" class="popup-modal slider mfp-hide">	
+                    </div> <!-- /modal-01 -->
 
-				     	<div class="media">
-				     		<img src="images/navisafe3.PNG" alt="NaviSafe" />
-				     	</div>      	
+                    <div id="modal-02" class="popup-modal slider mfp-hide">
 
-					   <div class="description-box">
-					      <h4>NaviSafe</h4>		      
-					      <p>App that takes neighbourhood crime data and determines the shortest and safest route to get users to their destination</p>
+                        <div class="media">
+                            <img src="images/navisafe3.PNG" alt="NaviSafe" />
+                        </div>
 
-					      <div class="categories">App Development (Mockup)</div>			               
-					   </div>
+                        <div class="description-box">
+                            <h4>NaviSafe</h4>
+                            <p>App that takes neighbourhood crime data and determines the shortest and safest route to get users to their destination</p>
 
-			         <div class="link-box">
-			            <a href="https://devpost.com/software/navisafe-7zsknq">View Project</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+                            <div class="categories">App Development (Mockup)</div>
+                        </div>
 
-				   </div> <!-- /modal-02 -->
+                        <div class="link-box">
+                            <a href="#" class="popup-modal-dismiss">Close</a>
+                            <a href="https://devpost.com/software/navisafe-7zsknq">View Project</a>
+                        </div>
 
-				   <div id="modal-03" class="popup-modal slider mfp-hide">	
+                    </div> <!-- /modal-02 -->
 
-				     	<div class="media">
-				     		<img src="images/senti-tweets.PNG" alt="SentiTweets" />
-				     	</div>      	
+                    <div id="modal-03" class="popup-modal slider mfp-hide">
 
-					   <div class="description-box">
-					      <h4>SentiTweets</h4>		      
-					      <p>Website that uses sentiment analysis of Tweets regarding companies to predict stock performance</p>
+                        <div class="media">
+                            <img src="images/senti-tweets.PNG" alt="SentiTweets" />
+                        </div>
 
-					      <div class="categories">Web Development</div>			               
-					   </div>
+                        <div class="description-box">
+                            <h4>SentiTweets</h4>
+                            <p>Website that uses sentiment analysis of Tweets regarding companies to predict stock performance</p>
 
-			         <div class="link-box">
-			            <a href="https://devpost.com/software/sentitweets">View Project</a>
-					      <a href="#" class="popup-modal-dismiss">Close</a>
-			         </div>		      
+                            <div class="categories">Web Development</div>
+                        </div>
 
-				   </div> <!-- /modal-03 -->
+                        <div class="link-box">
+                            <a href="#" class="popup-modal-dismiss">Close</a>
+                            <a href="https://devpost.com/software/sentitweets">View Project</a>
+                        </div>
+
+                    </div> <!-- /modal-03 -->
 
 
-				   <!-- modal popups - end
+                    <!-- modal popups - end
 	            ============================================================= -->
 
                 </div> <!-- /portfolio-wrapper -->
@@ -915,4 +916,6 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
-</body></html>
+</body>
+
+</html>
