--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
         <ul class="intro-social">
 
-            <li><a href="www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
-            <li><a href="www.linkedin.comin/nicholastao"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.comin/nicholastao"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul> <!-- /intro-social -->
 
@@ -885,8 +885,8 @@
             <div class="col-six tab-full pull-right social">
 
                 <ul class="footer-social">
-                    <li><a href="www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
-                    <li><a href="www.linkedin.comin/nicholastao"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.comin/nicholastao"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 </ul>
 
