--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <ul class="intro-social">
 
             <li><a href="https://www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
-            <li><a href="https://www.linkedin.comin/nicholastao"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/nicholastao"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul> <!-- /intro-social -->
 
@@ -886,7 +886,7 @@
 
                 <ul class="footer-social">
                     <li><a href="https://www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.comin/nicholastao"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/nicholastao"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 </ul>
 
