links now open in new tab

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
         <ul class="intro-social">
 
-            <li><a href="https://www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
-            <li><a href="https://www.linkedin.com/in/nicholastao"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://www.github.com/nicktao88" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/nicholastao" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul> <!-- /intro-social -->
 
@@ -561,7 +561,7 @@
 
                         <div class="link-box">
                             <a href="#" class="popup-modal-dismiss">Close</a>
-                            <a href="https://devpost.com/software/summeet">View Project</a>
+                            <a href="https://devpost.com/software/summeet" target="_blank">View Project</a>
                         </div>
 
                     </div> <!-- /modal-01 -->
@@ -581,7 +581,7 @@
 
                         <div class="link-box">
                             <a href="#" class="popup-modal-dismiss">Close</a>
-                            <a href="https://devpost.com/software/navisafe-7zsknq">View Project</a>
+                            <a href="https://devpost.com/software/navisafe-7zsknq" target="_blank">View Project</a>
                         </div>
 
                     </div> <!-- /modal-02 -->
@@ -885,8 +885,8 @@
             <div class="col-six tab-full pull-right social">
 
                 <ul class="footer-social">
-                    <li><a href="https://www.github.com/nicktao88"><i class="fa fa-github"></i></a></li>
-                    <li><a href="https://www.linkedin.com/in/nicholastao"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.github.com/nicktao88" target="_blank"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/nicholastao" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 </ul>
 
