--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    ================================================== -->
     <meta charset="utf-8">
     <title>Nicholas Tao</title>
-    <meta name="description" content="Nicholas Tao is a high school student passionate about technology, badminton, and growing students' networks">
+    <meta name="description" content="Nicholas Tao is a student passionate about technology, badminton, and growing students' networks">
     <meta name="keywords" content="Nicholas Tao, High School Student, Technology, Toronto, Badminton">
     <meta name="author" content="Nicholas Tao">
 
@@ -879,7 +879,20 @@
     <!-- footer
    ================================================== -->
 
+
+    <!-- footer -->
     <footer>
+        <div class="row footer-main">
+
+            <div class="col-six tab-full pull-left">
+
+                <h4>Thank you for visiting my website.</h4>
+                <p>Feel free to reach out to me to learn more, work together, or just to chat!</p>
+            </div>
+
+        </div>
+        <!-- end footer-main -->
+
         <div class="row">
 
             <div class="col-six tab-full pull-right social">
