updated keywords and description

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    ================================================== -->
     <meta charset="utf-8">
     <title>Nicholas Tao</title>
-    <meta name="description" content="Nicholas Tao is a student passionate about technology, badminton, and growing students' networks">
-    <meta name="keywords" content="Nicholas Tao, High School Student, Technology, Toronto, Badminton">
+    <meta name="description" content="Nicholas Tao is a student passionate about technology, badminton, and helping students grow their networks">
+    <meta name="keywords" content="Nicholas Tao, Nicholas, Tao, High School, Student, Technology, Toronto, Badminton">
     <meta name="author" content="Nicholas Tao">
 
     <!-- mobile specific metas
@@ -924,7 +924,7 @@
                 <div class="copyright">
                     <span>© Copyright Nicholas Tao 2019.</span>
                     <span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
-		    <span><a href = "https://www.get.tech">Powered by .TECH domains</a></span>	
+                    <span><a href="https://www.get.tech">Powered by .TECH domains</a></span>
                 </div>
             </div>
 
