--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <ul class="intro-social">
 
-            <li><a href="https://www.github.com/nicktao88" target="_blank"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.github.com/nicholas-tao" target="_blank"><i class="fa fa-github"></i></a></li>
             <li><a href="https://www.linkedin.com/in/nicholastao" target="_blank"><i class="fa fa-linkedin"></i></a></li>
             <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
         </ul> <!-- /intro-social -->
@@ -913,7 +913,7 @@
             <div class="col-six tab-full pull-right social">
 
                 <ul class="footer-social">
-                    <li><a href="https://www.github.com/nicktao88" target="_blank"><i class="fa fa-github"></i></a></li>
+                    <li><a href="https://www.github.com/nicholas-tao" target="_blank"><i class="fa fa-github"></i></a></li>
                     <li><a href="https://www.linkedin.com/in/nicholastao" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                     <li><a href="mailto:tao.nicholas1@gmail.com"><i class="fa fa-envelope"></i></a></li>
                 </ul>
