changed about me section

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h1>Let me introduce myself.</h1>
 
                 <div class="intro-info">
-                    <p class="lead">I am an ambitious youth leader, studying at Bayview Secondary School. As an active leader in the Toronto Youth Network and Bayview Computer Club, I seize all opportunities to grow as an individual and learn from others. From working as a Front End Developer for Helping Hands App to coaching at Lee's Badminton Training Centre, I apply a detailed, analytical approach to generating meaningful results. I hope to help and empower others, whilst creating an environment for other passionate individuals to thrive. </p>
+                    <p class="lead">I am Nicholas, a student at Bayview Secondary School, passionate about technology and finance. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Frontend Developer at Helping Hands App, to coaching at Lee's Badminton Training Centre, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have attended numerous hackathons and received awards. Check out some of my projects below!</p>
                 </div>
 
             </div>
