update copyright year

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-150378045-1');
-
     </script>
 
 
@@ -128,7 +127,7 @@
                 <h1>Let me introduce myself.</h1>
 
                 <div class="intro-info">
-                    <p class="lead">I am Nicholas, a student at Bayview Secondary School, passionate about technology and finance. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Frontend Developer at Helping Hands App, to coaching at Lee's Badminton Training Centre, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have attended numerous hackathons and received awards. Check out some of my projects below!</p>
+                    <p class="lead">I am Nicholas, a student at Bayview Secondary School, passionate about technology and finance. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Frontend Developer at Helping Hands App, to coaching at Lee's Badminton Training Centre, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have attended numerous hackathons and received several awards. Check out some of my projects below!</p>
                 </div>
 
             </div>
@@ -922,9 +921,8 @@
 
             <div class="col-six tab-full">
                 <div class="copyright">
-                    <span>© Copyright Nicholas Tao 2019.</span>
+                    <span>© Copyright Nicholas Tao 2020.</span>
                     <span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
-                    <span><a href="https://www.get.tech">Powered by .TECH domains</a></span>
                 </div>
             </div>
 
@@ -945,6 +943,4 @@
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 
-</body>
-
-</html>
+</body></html>
