update descs, change colours

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <h1>Let me introduce myself.</h1>
 
                 <div class="intro-info">
-                    <p class="lead">I am Nicholas, a student at Bayview Secondary School who enjoys learning about and working with new technologies. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Exeuctive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have attended numerous hackathons and received several awards. Check out some of my projects below!</p>
+                    <p class="lead">I am Nicholas, a student at Bayview Secondary School who enjoys learning about and working with new technologies. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Exeuctive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have attended numerous hackathons and received several awards. Check out some of the things I've done below!</p>
                 </div>
 
             </div>
@@ -548,7 +548,7 @@
                                     <div class="folio-item-cell">
                                         <h3 class="folio-title">FinHacks 2019</h3>
                                         <span class="folio-types">
-                                            I led a team of 15 in organizing a fintech hackathon
+                                            A FinTech hackathon where I led a team of 15 organizers
                                         </span>
                                     </div>
                                 </div>
