--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
     <section id="about">
 
         <div class="row section-intro">
-            <div class="col-twelve">
+            <div class = "col-four">
+                <img src = "images\headshot.JPG" alt = "Nicholas Tao Headshot">
+            </div>
+            <div class="col-eight">
 
                 <h5>Nice to meet you!</h5>
                 <h1>Let me introduce myself.</h1>
@@ -135,6 +138,7 @@
                 </div>
 
             </div>
+            
         </div> <!-- /section-intro -->
         <!--
    	<div class="row about-content">
