update about me blurb

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <h1>Let me introduce myself.</h1>
 
                 <div class="intro-info">
-                    <p class="lead">I am Nicholas, a student at Bayview Secondary School who enjoys learning about and working with new technologies. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have attended numerous hackathons and received several awards. Check out some of the things I've done below!</p>
+                    <p class="lead">I am Nicholas, a student at Bayview Secondary School who enjoys learning about and working with new technologies. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have participated in numerous hackathons and received several awards. Check out some of the things I've done below!</p>
                 </div>
 
             </div>
