add lynz to projects, remove sentitweets

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
                     <div class="bgrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/spotifinder.png" alt="SentiTweets">
+                            <img src="images/spotifinder.png" alt="SpotiFinder">
                             <a href="#modal-01" class="overlay">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
@@ -529,13 +529,13 @@
 
                     <div class="bgrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/senti-tweets.PNG" alt="SentiTweets">
+                            <img src="images/lynz.png" alt="Lynz">
                             <a href="#modal-03" class="overlay">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
-                                        <h3 class="folio-title">SentiTweets</h3>
+                                        <h3 class="folio-title">Lynz</h3>
                                         <span class="folio-types">
-                                            Stock performance prediction based on Tweets
+                                            Web app to view busyness levels of nearby grocery stores
                                         </span>
                                     </div>
                                 </div>
@@ -637,19 +637,19 @@
                     <div id="modal-03" class="popup-modal slider mfp-hide">
 
                         <div class="media">
-                            <img src="images/senti-tweets.PNG" alt="SentiTweets" />
+                            <img src="images/lynz.png" alt="Lynz" />
                         </div>
 
                         <div class="description-box">
-                            <h4>SentiTweets</h4>
-                            <p>Website that uses sentiment analysis of Tweets regarding companies to predict stock performance</p>
+                            <h4>Lynz</h4>
+                            <p>Web app that displays busyness levels of nearby grocery stores based on crowdsourced data</p>
 
                             <div class="categories">Web Development</div>
                         </div>
 
                         <div class="link-box">
                             <a href="#" class="popup-modal-dismiss">Close</a>
-                            <a href="https://devpost.com/software/sentitweets">View Project</a>
+                            <a href="https://devpost.com/software/lynz" target="_blank">View Project</a>
                         </div>
 
                     </div> <!-- /modal-03 -->
