--- a/index.html
+++ b/index.html
@@ -125,18 +125,18 @@
     <section id="about">
 
         <div class="row section-intro">
-            <div class = "col-four">
-                <img src = "images\headshot.JPG" alt = "Nicholas Tao Headshot">
-            </div>
-            <div class="col-eight">
-
+            
+            <div class="col-twelve">
                 <h5>Nice to meet you!</h5>
                 <h1>Let me introduce myself.</h1>
-
-                <div class="intro-info">
-                    <p class="lead">I am Nicholas, a student at Bayview Secondary School who enjoys learning about and working with new technologies. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Dedicated to developing innovative solutions to everyday issues, I have participated in numerous hackathons and received several awards. Check out some of the things I've done below!</p>
+                <div class = "col-four headshot">
+                    <img src = "images\headshot2.JPG" alt = "Nicholas Tao Headshot">
+                  </div>
+                <div class = "col-eight">
+                    <div class="intro-info">
+                        <p class="lead">I am Nicholas, an incoming first-year Computer Science student at the University of Waterloo. As someone who enjoys learning about and working with new technologies, I am dedicated to developing innovative solutions to everyday issues. Being an active leader in multiple youth organizations and school clubs, I strive to grow as an individual and learn from others. From working as a Front End Developer at Helping Hands App, to being the Executive Director of the Toronto Youth Network, I have gained valuable experience in working collaboratively towards a common goal. Check out some of the things I've done below!</p>
+                    </div>
                 </div>
-
             </div>
             
         </div> <!-- /section-intro -->
