--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <h5>Nice to meet you!</h5>
                 <h1>Let me introduce myself.</h1>
                 <div class = "col-four headshot">
-                    <img src = "images\headshot2.JPG" alt = "Nicholas Tao Headshot">
+                    <img src = "images/headshot2.JPG" alt = "Nicholas Tao Headshot">
                   </div>
                 <div class = "col-eight">
                     <div class="intro-info">
