add omegu to projects, update, project descriptions

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    ================================================== -->
     <meta charset="utf-8">
     <title>Nicholas Tao</title>
-    <meta name="description" content="Nicholas Tao is a student developer passionate about technology and finance">
-    <meta name="keywords" content="Nicholas Tao, Nicholas, Tao, High School, Student, Technology, Toronto, Badminton">
+    <meta name="description" content="Nicholas Tao is a student developer passionate about developing innovative solutions to everyday problems">
+    <meta name="keywords" content="Nicholas Tao, University of Waterloo, Computer Sciene, High School, Student, Technology, Toronto, Badminton">
     <meta name="author" content="Nicholas Tao">
 
     <!-- mobile specific metas
@@ -497,6 +497,22 @@
 
                     <div class="bgrid folio-item">
                         <div class="item-wrap">
+                            <img src="images/omegu.png" alt="OmegU">
+                            <a href="#modal-07" class="overlay">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">OmegU</h3>
+                                        <span class="folio-types">
+                                           Connecting first year university students, together
+                                        </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div> <!-- /folio-item -->
+
+                    <div class="bgrid folio-item">
+                        <div class="item-wrap">
                             <img src="images/spotifinder.png" alt="SpotiFinder">
                             <a href="#modal-01" class="overlay">
                                 <div class="folio-item-table">
@@ -602,9 +618,9 @@
 
                         <div class="description-box">
                             <h4>SpotiFinder</h4>
-                            <p>Web app that finds dating matches for users based on the sentiment analysis of lyrics of songs in their Spotify playlists</p>
+                            <p>The music that one listens to reveals a lot about their personality. SpotiFinder is a web app that finds dating matches for users based on the sentiment analysis of lyrics of songs in their Spotify playlists.</p>
 
-                            <div class="categories">Web Development</div>
+                            <div class="categories">Full-Stack Web Development</div>
                         </div>
 
                         <div class="link-box">
@@ -622,9 +638,9 @@
 
                         <div class="description-box">
                             <h4>summeet</h4>
-                            <p>Web app that transcribes meetings in real time and summarizes ideas discussed</p>
+                            <p>It's hard to keep up with and take notes during meetings. Summeet is a web app that transcribes meetings in real time and summarizes ideas discussed. It conveniently produces a PDF of the summary at the end of each meeting.</p>
 
-                            <div class="categories">Web Development</div>
+                            <div class="categories">Full-Stack Web Development</div>
                         </div>
 
                         <div class="link-box">
@@ -642,9 +658,9 @@
 
                         <div class="description-box">
                             <h4>Lynz</h4>
-                            <p>Web app that displays busyness levels of nearby grocery stores based on crowdsourced data</p>
+                            <p>The COVID-19 pandemic has led to long line ups at grocery stores. Lynz is Web app that displays the busyness levels of nearby grocery stores based on crowdsourced data, so that users can avoid long lines.</p>
 
-                            <div class="categories">Web Development</div>
+                            <div class="categories">Full-Stack Web Development</div>
                         </div>
 
                         <div class="link-box">
@@ -662,7 +678,7 @@
 
                         <div class="description-box">
                             <h4>FinHacks 2019</h4>
-                            <p>FinHacks was a fintech hackathon held on November 30, 2019 at the Centre for Social Innovation. It brough together 75 students from across the GTA to develop innovative solutions to problems in the finance industry.</p>
+                            <p>FinHacks was a fintech hackathon held on November 30, 2019 at the Centre for Social Innovation. It brought together 75 students from across the GTA to develop innovative solutions to problems in the finance industry.</p>
 
                             <div class="categories">Leadership | Hackathon Organizing</div>
                         </div>
@@ -714,6 +730,27 @@
                         </div>
 
                     </div> <!-- /modal-06 -->
+
+                    <div id="modal-07" class="popup-modal slider mfp-hide">
+
+                        <div class="media">
+                            <img src="images/omegu.png" alt="OmegU"/>
+                        </div>
+
+                        <div class="description-box">
+                            <h4>OmegU</h4>
+                            <p>Online classes make meeting new people hard, especially for incoming first-year university students, like myself. OmegU is a web app that connects students from the same university who have similar interests through calls that offer both text and video chat.</p>
+
+                            <div class="categories">Full-Stack Web Development</div>
+                        </div>
+
+                        <div class="link-box">
+                            <a href="#" class="popup-modal-dismiss">Close</a>
+                            <a href="https://github.com/nicholas-tao/omegu" target="_blank">View Project</a>
+                        </div>
+
+                    </div> <!-- /modal-07 -->
+
 
 
                     <!-- modal popups - end
