update omegu desc

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                                     <div class="folio-item-cell">
                                         <h3 class="folio-title">OmegU</h3>
                                         <span class="folio-types">
-                                           Connecting first year university students, together
+                                           Connecting first year university students, virtually
                                         </span>
                                     </div>
                                 </div>
@@ -739,7 +739,8 @@
 
                         <div class="description-box">
                             <h4>OmegU</h4>
-                            <p>Online classes make meeting new people hard, especially for incoming first-year university students, like myself. OmegU is a web app that connects students from the same university who have similar interests through calls that offer both text and video chat.</p>
+                            <p>OmegU is a web platform that connects incoming first-year university students from the same university. By placing users in one-on-one chats with other students who are either in their program or share common interests, OmegU allows meaningful friendships to be formed, despite the lack of in-person activities associated with one’s first year of university.
+                            </p>
 
                             <div class="categories">Full-Stack Web Development</div>
                         </div>
