change omegu gh repo link

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
 
                         <div class="link-box">
                             <a href="#" class="popup-modal-dismiss">Close</a>
-                            <a href="https://github.com/nicholas-tao/omegu" target="_blank">View Project</a>
+                            <a href="https://github.com/nicholas-tao/OmegU-Dashboard" target="_blank">View Project</a>
                         </div>
 
                     </div> <!-- /modal-07 -->
