--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 
                     <div class="bgrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/omegu.png" alt="OmegU">
+                            <img src="images/omegu-ss.jpg" alt="OmegU">
                             <a href="#modal-07" class="overlay">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
@@ -734,7 +734,7 @@
                     <div id="modal-07" class="popup-modal slider mfp-hide">
 
                         <div class="media">
-                            <img src="images/omegu.png" alt="OmegU"/>
+                            <img src="images/omegu-ss.jpg" alt="OmegU"/>
                         </div>
 
                         <div class="description-box">
